@@ -4,16 +4,15 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import uk.bovykina.matching_guru.algorithms.helpers.MentorshipValidator;
+import uk.bovykina.matching_guru.algorithms.helpers.MatchingCriteriaProvider;
+import uk.bovykina.matching_guru.algorithms.interfaces.CompatibilityCalculator;
+import uk.bovykina.matching_guru.algorithms.helpers.MatchSaver;
 import uk.bovykina.matching_guru.entity.ParticipantInProgrammeYear;
 import uk.bovykina.matching_guru.entity.ProgrammeYear;
-import uk.bovykina.matching_guru.entity.enums.MatchStatus;
 import uk.bovykina.matching_guru.entity.enums.ParticipantRole;
 import uk.bovykina.matching_guru.repository.ParticipantRepository;
-import uk.bovykina.matching_guru.repository.ProgrammeMatchingCriteriaRepository;
-import uk.bovykina.matching_guru.service.MatchService;
 import uk.bovykina.matching_guru.service.ProgrammeYearService;
-import uk.bovykina.matching_guru.dto.match.MatchCreateDto;
-import uk.bovykina.matching_guru.entity.ProgrammeMatchingCriteria;
 
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
@@ -25,159 +24,145 @@ import java.util.stream.Collectors;
 public class GaleShapleyService {
 
     private final ParticipantRepository participantRepository;
-    private final MatchService matchService;
-    private final CompatibilityService compatibilityService;
-    private final ProgrammeMatchingCriteriaRepository criteriaRepository;
+    private final CompatibilityCalculator compatibilityCalculator;
+    private final MatchingCriteriaProvider criteriaProvider;
+    private final MatchSaver matchSaver;
+    private final MentorshipValidator mentorshipValidator;
     private final ProgrammeYearService programmeYearService;
 
-    private final Map<String, Double> compatibilityCache = new ConcurrentHashMap<>();
+    @Transactional
+    public void matchParticipants(Long programmeYearId, boolean isInitialMatching) {
+        log.info("▶ Starting Gale-Shapley for ProgrammeYear ID: {} | Initial: {}", programmeYearId, isInitialMatching);
 
-    private Map<ParticipantInProgrammeYear, List<ParticipantInProgrammeYear>> galeShapley(
+        ProgrammeYear programmeYear = programmeYearService.getById(programmeYearId);
+
+        List<ParticipantInProgrammeYear> mentors = loadParticipants(programmeYearId, ParticipantRole.MENTOR, isInitialMatching);
+        List<ParticipantInProgrammeYear> mentees = loadParticipants(programmeYearId, ParticipantRole.MENTEE, isInitialMatching);
+
+        log.debug("Loaded {} mentors and {} mentees for ProgrammeYear ID: {}", mentors.size(), mentees.size(), programmeYearId);
+
+        if (mentors.isEmpty() || mentees.isEmpty()) {
+            log.warn("⚠ Not enough participants to match for ProgrammeYear ID: {}", programmeYearId);
+            return;
+        }
+
+        Map<String, Integer> weights = criteriaProvider.loadWeights(programmeYearId);
+        log.debug("Loaded matching criteria weights: {}", weights);
+
+        Map<ParticipantInProgrammeYear, List<ParticipantInProgrammeYear>> matches = runGaleShapley(mentors, mentees, weights);
+
+        matchSaver.saveMatches(programmeYearId, programmeYear, matches, weights);
+        log.info("✔ Matching complete for ProgrammeYear ID: {}", programmeYearId);
+    }
+
+    private List<ParticipantInProgrammeYear> loadParticipants(Long programmeYearId, ParticipantRole role, boolean isInitialMatching) {
+        return participantRepository.findByProgrammeYearIdAndRole(programmeYearId, role).stream()
+                .filter(p -> isInitialMatching || !Boolean.TRUE.equals(p.getIsMatched()))
+                .collect(Collectors.toList());
+    }
+
+    private Map<ParticipantInProgrammeYear, List<ParticipantInProgrammeYear>> runGaleShapley(
             List<ParticipantInProgrammeYear> mentors,
             List<ParticipantInProgrammeYear> mentees,
             Map<String, Integer> weights
     ) {
+        long startTime = System.nanoTime();
         Map<ParticipantInProgrammeYear, List<ParticipantInProgrammeYear>> matches = new ConcurrentHashMap<>();
         Map<ParticipantInProgrammeYear, Queue<ParticipantInProgrammeYear>> mentorPreferences = new HashMap<>();
 
         for (ParticipantInProgrammeYear mentor : mentors) {
-            List<ParticipantInProgrammeYear> compatibleMentees = mentees.stream()
-                    .filter(mentee -> isCompatible(mentor, mentee))
-                    .sorted(Comparator.comparingDouble(mentee -> -compatibilityService.calculateScore(mentor, mentee, weights)))
-                    .toList();
+            List<ParticipantInProgrammeYear> rankedMentees = mentees.stream()
+                    .filter(mentee -> mentorshipValidator.isCompatible(mentor, mentee))
+                    .sorted(Comparator.comparingDouble(m -> -compatibilityCalculator.calculate(mentor, m, weights)))
+                    .collect(Collectors.toList());
 
-            if (!compatibleMentees.isEmpty()) {
-                mentorPreferences.put(mentor, new LinkedList<>(compatibleMentees));
+            if (!rankedMentees.isEmpty()) {
+                mentorPreferences.put(mentor, new LinkedList<>(rankedMentees));
+                log.debug("Mentor {} has {} preferred mentees.", mentor.getId(), rankedMentees.size());
+            } else {
+                log.debug("Mentor {} has no compatible mentees.", mentor.getId());
             }
         }
 
         Queue<ParticipantInProgrammeYear> freeMentors = new LinkedList<>(mentorPreferences.keySet());
-        log.info("🔄 Starting Gale-Shapley algorithm with {} active mentors", freeMentors.size());
+
+        log.debug("Starting the Gale-Shapley algorithm with {} free mentors.", freeMentors.size());
 
         while (!freeMentors.isEmpty()) {
             ParticipantInProgrammeYear mentor = freeMentors.poll();
+            log.debug("Processing mentor {}.", mentor.getId());
+
             Queue<ParticipantInProgrammeYear> preferences = mentorPreferences.get(mentor);
 
-            if (preferences.isEmpty()) {
-                log.info("ℹ Mentor {} has no suitable mentees", mentor.getId());
+            if (matches.getOrDefault(mentor, Collections.emptyList()).size() >= mentor.getMenteesNumber()) {
                 continue;
             }
 
-            while (!preferences.isEmpty()) {
+            while (preferences != null && !preferences.isEmpty()) {
                 ParticipantInProgrammeYear mentee = preferences.poll();
+                double score = compatibilityCalculator.calculate(mentor, mentee, weights);
+                log.debug("Evaluating match for Mentor {} and Mentee {}: score {}", mentor.getId(), mentee.getId(), score);
 
-                double compatibilityScore = compatibilityService.calculateScore(mentor, mentee, weights);
-
-                if (compatibilityScore == 0) {
-                    log.debug("❌ Mentor {} and Mentee {} have a compatibility score of 0. Skipping match.", mentor.getId(), mentee.getId());
+                if (score == 0) {
+                    log.debug("Mentor {} and Mentee {} are not compatible (score 0).", mentor.getId(), mentee.getId());
                     continue;
                 }
 
-                if (!matches.containsValue(mentee)) {
+                if (!isAlreadyMatched(matches, mentee)) {
                     matches.computeIfAbsent(mentor, k -> new ArrayList<>()).add(mentee);
-                    log.info("🔗 Created a match: {} (mentor) → {} (mentee) with compatibility {}", mentor.getId(), mentee.getId(), compatibilityScore);
+                    log.debug("Match found: Mentor {} -> Mentee {}", mentor.getId(), mentee.getId());
                     break;
                 } else {
-                    ParticipantInProgrammeYear currentMentor = matches.entrySet().stream()
-                            .filter(entry -> entry.getValue().contains(mentee))
-                            .map(Map.Entry::getKey)
-                            .findFirst()
-                            .orElseThrow();
+                    ParticipantInProgrammeYear currentMentor = findCurrentMentor(matches, mentee);
+                    double currentScore = compatibilityCalculator.calculate(currentMentor, mentee, weights);
 
-                    if (compatibilityService.calculateScore(mentor, mentee, weights) > compatibilityService.calculateScore(currentMentor, mentee, weights)) {
+                    if (score > currentScore) {
+                        log.debug("Mentor {} has a better score than current mentor {}. Replacing the match.", mentor.getId(), currentMentor.getId());
                         matches.get(currentMentor).remove(mentee);
                         matches.computeIfAbsent(mentor, k -> new ArrayList<>()).add(mentee);
                         freeMentors.add(currentMentor);
-                        log.info("🔄 Pair reassigned: {} (new mentor) → {} (mentee)", mentor.getId(), mentee.getId());
                         break;
+                    } else {
+                        log.debug("Mentor {} has a worse score than current mentor {}. Keeping current match.", mentor.getId(), currentMentor.getId());
                     }
+                }
+            }
+
+            if (matches.getOrDefault(mentor, Collections.emptyList()).size() < mentor.getMenteesNumber()) {
+                if (!preferences.isEmpty()) {
+                    log.debug("Mentor {} needs more mentees. Re-adding to the queue.", mentor.getId());
+                    freeMentors.add(mentor);
+                } else {
+                    log.debug("Mentor {} has no compatible mentees left. Not re-adding to the queue.", mentor.getId());
                 }
             }
         }
 
+        long endTime = System.nanoTime();
+        long durationInMillis = (endTime - startTime) / 1_000_000;
+        log.info("Execution time of Gale-Shapley algorithm: {} ms", durationInMillis);
+
+        log.debug("Gale-Shapley algorithm completed with {} total matches.", matches.size());
         return matches;
     }
 
-    private boolean isCompatible(ParticipantInProgrammeYear mentor, ParticipantInProgrammeYear mentee) {
-        if (!compatibilityService.isValidMentorship(mentor.getAcademicStage(), mentee.getAcademicStage())) {
-            log.debug("❌ Incompatible academic stages: {} (mentor) and {} (mentee)",
-                    mentor.getId(), mentee.getId());
-            return false;
-        }
 
-        boolean sameCourse = mentor.getCourse().getId().equals(mentee.getCourse().getId());
-        boolean sameGroup = mentor.getCourseGroup().equals(mentee.getCourseGroup());
-
-        if (sameCourse || sameGroup) {
-            return true;
-        }
-
-        log.debug("❌ Different course groups: {} (mentor) and {} (mentee)", mentor.getId(), mentee.getId());
-        return false;
-    }
-
-    @Transactional
-    public void matchParticipants(Long programmeYearId, boolean isInitialMatching) {
-        log.info("▶ Starting matching process for ProgrammeYear ID: {} | Initial: {}", programmeYearId, isInitialMatching);
-
-        ProgrammeYear programmeYear = programmeYearService.getById(programmeYearId);
-        List<ParticipantInProgrammeYear> mentors;
-        List<ParticipantInProgrammeYear> mentees;
-
-        if (isInitialMatching) {
-            mentors = participantRepository.findByProgrammeYearIdAndRole(programmeYearId, ParticipantRole.MENTOR);
-            mentees = participantRepository.findByProgrammeYearIdAndRole(programmeYearId, ParticipantRole.MENTEE);
+    private boolean isAlreadyMatched(Map<ParticipantInProgrammeYear, List<ParticipantInProgrammeYear>> matches, ParticipantInProgrammeYear mentee) {
+        boolean matched = matches.values().stream().anyMatch(list -> list.contains(mentee));
+        if (matched) {
+            log.debug("Mentee {} is already matched.", mentee.getId());
         } else {
-            mentors = participantRepository.findByProgrammeYearIdAndRole(programmeYearId, ParticipantRole.MENTOR)
-                    .stream().filter(m -> !m.getIsMatched()).toList();
-
-            mentees = participantRepository.findByProgrammeYearIdAndRole(programmeYearId, ParticipantRole.MENTEE)
-                    .stream().filter(m -> !m.getIsMatched()).toList();
+            log.debug("Mentee {} is not yet matched.", mentee.getId());
         }
-
-        log.info("👥 Found {} mentors and {} mentees", mentors.size(), mentees.size());
-
-        if (mentors.isEmpty() || mentees.isEmpty()) {
-            log.warn("⚠ Not enough participants for matching");
-            return;
-        }
-
-        Map<String, Integer> weights = loadMatchingCriteria(programmeYearId);
-        log.info("📊 Loaded criteria weights: {}", weights);
-
-        Map<ParticipantInProgrammeYear, List<ParticipantInProgrammeYear>> matches = galeShapley(mentors, mentees, weights);
-
-        // Create matches for each mentor and mentee
-        matches.forEach((mentor, menteesList) -> {
-            for (ParticipantInProgrammeYear mentee : menteesList) {
-                double compatibilityScore = compatibilityService.calculateScore(mentor, mentee, weights);
-                log.info("🔗 Creating match: {} (mentor) → {} (mentee) with compatibility {}", mentor.getId(), mentee.getId(), compatibilityScore);
-
-                MatchStatus matchStatus = compatibilityService.needsApproval(compatibilityScore, programmeYear)
-                        ? MatchStatus.PENDING
-                        : MatchStatus.APPROVED;
-
-                MatchCreateDto matchCreateDto = new MatchCreateDto(programmeYearId, mentor.getId(), mentee.getId(), compatibilityScore, matchStatus);
-                matchService.createMatch(matchCreateDto);
-
-                mentor.setIsMatched(true);
-                mentee.setIsMatched(true);
-
-                participantRepository.save(mentor);
-                participantRepository.save(mentee);
-
-                log.info("✅ Match saved: {} (mentor) → {} (mentee) with compatibility {}", mentor.getId(), mentee.getId(), compatibilityScore);
-            }
-        });
-
-        log.info("✔ Matching process completed for ProgrammeYear ID: {}", programmeYearId);
+        return matched;
     }
 
-    private Map<String, Integer> loadMatchingCriteria(Long programmeYearId) {
-        return criteriaRepository.findByProgrammeYearId(programmeYearId).stream()
-                .collect(Collectors.toMap(
-                        c -> c.getCriterionType().name(),
-                        ProgrammeMatchingCriteria::getWeight
-                ));
+    private ParticipantInProgrammeYear findCurrentMentor(Map<ParticipantInProgrammeYear, List<ParticipantInProgrammeYear>> matches,
+                                                         ParticipantInProgrammeYear mentee) {
+        return matches.entrySet().stream()
+                .filter(e -> e.getValue().contains(mentee))
+                .map(Map.Entry::getKey)
+                .findFirst()
+                .orElseThrow();
     }
 }
